ansible-eks-deploy/k8s-manifests/namespace.yml
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: argocd

# ---
# apiVersion: v1
# kind: Namespace
# metadata:
#   name: monitoring

# ---
apiVersion: v1
kind: Namespace
metadata:
  name: database
