ansible-eks-deploy/k8s-manifests/jmeter-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jmeter
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jmeter
  template:
    metadata:
      labels:
        app: jmeter
    spec:
      nodeSelector:
        eks.amazonaws.com/nodegroup: private-node-group
        topology.kubernetes.io/zone: ap-northeast-2a  # 특정 AZ 지정
      containers:
        - name: jmeter
          image: justb4/jmeter:latest
          command: ["/bin/bash"]
          args: ["-c", "while true; do sleep 30; done;"]
          volumeMounts:
            - name: jmeter-scripts
              mountPath: /scripts
      volumes:
        - name: jmeter-scripts
          persistentVolumeClaim:
            claimName: jmeter-pvc
