ansible-eks-deploy/k8s-manifests/my-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-app-service
  namespace: infrastructure
spec:
  type: ClusterIP  # LoadBalancer 대신 ClusterIP 사용
  selector:
    app: my-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
